--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,8 +55,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: github-pages
+    #environment:
+    #  name: github-pages
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
