--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,9 @@ env:
   # Nome esatto del progetto
   PROJECT_FILE: BlazorApp1.csproj
   # Cartella di output del publish
-  PUBLISH_DIR: ${{ github.workspace }}/publish/wwwroot
+  #PUBLISH_DIR: ${{ github.workspace }}/publish/wwwroot
+  PUBLISH_DIR: ${{ github.workspace }}
+
   # URL pubblico su GitHub Pages (Blazor: base href)
   BASE_HREF: /web/video-uploader/
 
