--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ env:
   PROJECT_FILE: BlazorApp1.csproj
   # Cartella di output del publish
   #PUBLISH_DIR: ${{ github.workspace }}/publish/wwwroot
-  PUBLISH_DIR: ${{ github.workspace }}
+  PUBLISH_DIR: ${{ github.workspace }}/publish
 
   # URL pubblico su GitHub Pages (Blazor: base href)
   BASE_HREF: /web/video-uploader/
