--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,67 +1,62 @@
-name: Deploy GitHub Pages
+
+name: Deploy Blazor WASM to GitHub Pages (branch gh-pages)
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write    # per scrivere su gh-pages
 
 jobs:
-  # Build job
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
-
     env:
-      PROJECT_PATH: BlazorApp1.csproj     # <-- il tuo csproj è nella root della worktree
+      PROJECT_PATH: BlazorApp1.csproj
       PUBLISH_DIR: release/wwwroot
-      REPO_SUBDIR: web                    # <-- nome repo: cartella finale su Pages
-
-
+      REPO_SUBDIR: web
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v5
-        with:
-          dotnet-version: 10.0.x
-      - name: Prepare Blazor WASM for GitHub Pages
-        uses: na1307/blazor-github-pages@v4
-        id: prepare
-        with:
-          project-path: BlazorApp1.csproj
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
-        with:
-        path: ${{ steps.prepare.outputs.wwwroot-path }}
-	
+        uses: actions/checkout@v4
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-	
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: "10.x"
+
+      - name: Publish Blazor (Release)
+        run: dotnet publish "${{ env.PROJECT_PATH }}" -c Release -o release --nologo
+
+      - name: Add 404 fallback
+        run: cp "${{ env.PUBLISH_DIR }}/index.html" "${{ env.PUBLISH_DIR }}/404.html"
+
+      - name: Fix base href for /web/
+        shell: bash
+        run: |
+          index="${{ env.PUBLISH_DIR }}/index.html"
+          sed -i 's|<base href="/"|<base href="/'${{ env.REPO_SUBDIR }}'/"|g' "$index"
+          sed -i 's|<base href="./"|<base href="/'${{ env.REPO_SUBDIR }}'/"|g' "$index"
+
+      - name: Create .nojekyll in payload
+        run: bash -lc 'touch "${{ env.PUBLISH_DIR }}/.nojekyll"'
+
+      - name: List payload (diagnostics)
+        run: |
+          echo "Top-level of ${{ env.PUBLISH_DIR }}:"
+          ls -la "${{ env.PUBLISH_DIR }}"
+          echo ""
+          echo "Listing ${{ env.PUBLISH_DIR }}/_framework (if exists):"
+          ls -la "${{ env.PUBLISH_DIR }}/_framework" || true
+          echo ""
+          echo "First 30 lines of index.html:"
+          head -n 30 "${{ env.PUBLISH_DIR }}/index.html" || true
+
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ${{ env.PUBLISH_DIR }}
+          enable_jekyll: false
